# two-stroke

./: Cargo.toml  LICENSE.md  LICENSE.txt  README.md
assets/: monkey.iqe
src/: gfx_types.rs  input_state.rs  main.rs  mesh.rs  obj_loader.rs  state.rs  text.rs  texture.rs  vertex.rs
src/shader/: fragment.glsl  text-fragment.glsl  text-vertex.glsl  vertex.glsl
