[package]
name = "two-stroke"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]

[dependencies]
gfx = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
cgmath = "*"
time = "*"
glutin = { path = "../glutin" }
winit = { path = "../winit" }

[replace]
"glutin:0.8.1" = { path = "../glutin" }